--- a/proyecto_becas/cliente/src/app/components/home/home.component.html
+++ b/proyecto_becas/cliente/src/app/components/home/home.component.html
@@ -56,8 +56,10 @@
             <!--Contenido de los datos personales-->
             <div class="tab-pane fade show active" id="divdatospersonales" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
               <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">@</span>
-                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                <span class="input-group-text" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person" viewBox="0 0 16 16">
+                  <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5v2z"/></svg></span>
+                <input type="text" class="form-control" placeholder="Nombre del alumno" aria-label="Username" aria-describedby="basic-addon1">
               </div>
               
               <div class="input-group mb-3">
@@ -90,7 +92,13 @@
                 <span class="input-group-text">With textarea</span>
                 <textarea class="form-control" aria-label="With textarea"></textarea>
               </div>
+              <div class="text-center mt-3">
+                <button type="button" class="btn btn-dark btn-lg">Guardar</button>
+              </div>
+              
             </div>
+            <!--fin de la tabla de datos personales-->
+            
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
               <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">Nombre</span>
@@ -126,7 +134,7 @@
                 <textarea class="form-control" aria-label="Situacion de la Vivienda"></textarea>
               </div>
 
-              <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+              <div class="d-grid gap-2 d-md-flex justify-content-md-end ">
                 <button class="btn btn-primary me-md-2" type="button">Guardar</button>
               </div>
             </div>
