--- a/proyecto_becas/cliente/src/app/components/usuario/usuario.component.html
+++ b/proyecto_becas/cliente/src/app/components/usuario/usuario.component.html
@@ -11,19 +11,19 @@
                         
                             <div class="input-field col s12 customInput">
                                 <i class="material-icons prefix">email</i>
-                                <input [ngModel]="usuario1.correo" class="browser-default " type="email" name="email" id="email"  placeholder="correo"
+                                <input [(ngModel)]="usuario1.correo" class="browser-default " type="email" name="email" id="email"  placeholder="correo"
                                     autocomplete="off">  <!--aqui se extrae la informacion necesitafa para mandarlo, ademas de que se usa el modelo de usuario definido en models   -->
                                     <label for="email">Email</label>
                              </div>
                             <div class="input-field col s12 customInput">
                                 <i class="material-icons prefix">vpn_key</i>
-                                <input [ngModel]="usuario1.password" class="browser-default " type="password"    name="password" id="password" 
+                                <input [(ngModel)]="usuario1.password" class="browser-default " type="password"    name="password" id="password" 
                                     placeholder="contraseña" autocomplete="off">
                                     <label for="password">contraseña</label>
                             </div>
                             <div class="input-field col s12 customInput">
                                 <i class="material-icons prefix">vpn_key</i>
-                                <input [ngModel]="usuario1.tipo" class="browser-default " type="number"    name="rol" id="rol1" 
+                                <input [(ngModel)]="usuario1.tipo" class="browser-default " type="number"    name="rol" id="rol1" 
                                     placeholder="rol" autocomplete="off">
                                 <label for="rol1">rol </label>
                             </div>
