--- a/proyecto_becas/cliente/src/app/components/usuario/usuario.component.html
+++ b/proyecto_becas/cliente/src/app/components/usuario/usuario.component.html
@@ -1,3 +1,34 @@
+<nav class="navbar bg-body-tertiary">
+    <div class="container">
+      <h1>
+        Universidad
+        <small class="text-muted">Tecnologica de la Mixteca</small>
+      </h1>
+      <a class="navbar-brand" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+            <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+        </svg>
+      </a>
+    </div>
+  </nav>
+<div class="container">
+  <form>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <input [(ngModel)]="usuario1.correo" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="correo">
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input [(ngModel)]="usuario1.password" type="text" class="form-control" id="exampleInputPassword1" name="password">
+    </div>
+    <div class="mb-3">
+      <label for="exampleTipo1" class="form-label">Tipo</label>
+      <input [(ngModel)]="usuario1.tipo" type="number" class="form-control" id="exampleTipo1" name="tipo">
+    </div>
+    <button [routerLink]="['/usuarios']" (click)="edit ? modificaru() : agregaru()" type="submit" class="btn btn-primary">GUARDAR</button>
+  </form>
+</div>
+<!--
 <div class="bodyLogin">
     <div class="container" id="main">
         <div class="row">
@@ -12,7 +43,7 @@
                             <div class="input-field col s12 customInput">
                                 <i class="material-icons prefix">email</i>
                                 <input [(ngModel)]="usuario1.correo" class="browser-default " type="email" name="email" id="email"  placeholder="correo"
-                                    autocomplete="off">  <!--aqui se extrae la informacion necesitafa para mandarlo, ademas de que se usa el modelo de usuario definido en models   -->
+                                    autocomplete="off">  aqui se extrae la informacion necesitafa para mandarlo, ademas de que se usa el modelo de usuario definido en models  
                                     <label for="email">Email</label>
                              </div>
                             <div class="input-field col s12 customInput">
@@ -30,12 +61,10 @@
                             
                         </div>
                         <div class="row">
-                            <button   class="btn col l12 s12 m12 btnLogin ">
-                                LOGIN
+                            <button (click)="edit ? modificaru() :  agregaru()"    class="btn col l12 s12 m12 btnLogin ">
+                               GUARDAR DATOS
                             </button>
-                            <div class="col s12 m12 l12 divOlvide">
-                                <a href="">Olvidé mi contraseña!</a>
-                            </div>
+                        
                         </div>
                     </div>
                 </div>
@@ -43,3 +72,4 @@
         </div>
     </div>
 </div>
+-->
