Se trabajo con bancos, funciona, falta agregar banco, no se pone eliminar

--- a/donacion/cliente/src/app/components/enfermera/enfermera.component.css
+++ b/donacion/cliente/src/app/components/enfermera/enfermera.component.css
@@ -17,7 +17,8 @@
    width: 80%;
    margin: 0 auto ;
 }
-#navbar
+#navbar 
 {
-   background-color: azure;
+   background-color: cadetblue;
+   
 }
