--- a/proyecto_becas/cliente/src/app/components/usuario-admin/usuario-admin.component.html
+++ b/proyecto_becas/cliente/src/app/components/usuario-admin/usuario-admin.component.html
@@ -9,12 +9,38 @@
 </head>
 <body>
 
+  
+
+
+
+
   <div class="container">
       <div class="table-responsive">
         <h3>Lista de Usuarios:</h3>
         <div class="container">
           <button routerLink="/ingresarUsuario" type="button" class="btn btn-dark">Ingresar Usuario</button>
         </div>
+
+        <div class="container">
+          <h5>Buscar Alumno por grupo :</h5>
+          <label for="semestre">Semestre:</label>
+          <select class="form-control" id="semestre">
+            <option selected>--SEMESTRE--</option>
+            <option>PROPEDEUTICO</option>
+            <option>PRIMERO</option>
+            <option>SEGUNDO</option>
+            <option>TERCERO</option>
+            <option>CUARTO</option>
+            <option>QUINTO</option>
+            <option>SEXTO</option>
+            <option>SEPTIMO</option>
+            <option>OCTAVO</option>
+            <option>NOVENO</option>
+            <option>DECIMO</option>
+          </select>
+
+
+        </div> 
         <table class="table table-striped">
           <thead>
             <tr >
