--- a/donacion/cliente/src/app/components/enfermera/enfermera.component.html
+++ b/donacion/cliente/src/app/components/enfermera/enfermera.component.html
@@ -34,19 +34,22 @@
               <li class="nav-item">
                 <a class="nav-link" href="#" [routerLink]="['/transfuciones']">Transfuciones</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" [routerLink]="['/banco']">Bancos</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
  <div id="tabla">
-    <table class="table table-success table-striped mt-4 g-3" >
+    <table class="stripted" >
         <thead>
             <tr>
-              <th scope="col">Numero de empleado</th>
-              <th scope="col">Idpersona</th>
-              <th scope="col">Hospital</th>
-              <th scope="col">Contrasena</th>
-              <th scope="col">Acciones</th>
+              <th >Numero de empleado</th>
+              <th >Idpersona</th>
+              <th >Hospital</th>
+              <th >Contrasena</th>
+              <th >Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -63,7 +66,7 @@
           </tbody>
       </table>
     </div>
-      <div class="container" id="formulario">
+      <div class="container" id="formulario" style="border-style: solid black;">
         <form class="row g-3 mt-3">
             <div class="col-6">
                 <label for="numero_tranajador" class="form-laber">Numero de trabajador</label>
@@ -96,28 +99,10 @@
         </div>
             <div class="col-12">
                 <BUTton type="submit" class="btn butn">Registrar</BUTton>
-                <button type="button" class="btn btn-primary" (click)="preparar()">Launch demo modal</button>
             </div>
         </form>
       </div>
  
-      <div class="modal" tabindex="-1" id="Mymodal" >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button type="button" class="btn-close"  (click)="static()"></button>
-            </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" href="#" >Close</button>
-              <button type="button-" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
