--- a/proyecto_becas/cliente/src/app/components/home/home.component.html
+++ b/proyecto_becas/cliente/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+}<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     
 </head>
 <body>
+
     <nav class="navbar bg-body-tertiary">
         <div class="container">
           <h1>
@@ -37,13 +38,13 @@
               <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Dependientes</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Recibos</button>
+              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-recibos" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Recibos</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Observaciones</button>
+              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-observaciones" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Observaciones</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Confirmacion</button>
+              <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-confirmacion" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Confirmacion</button>
             </li>
             <li class="nav-item" role="presentation">
               <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Área de Privacidad</button>
@@ -55,29 +56,8 @@
           <div class="tab-content" id="pills-tabContent">
             <!--Contenido de los datos personales-->
             <div class="tab-pane fade show active" id="divdatospersonales" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
-              <h6>Datos Personales del Solicitante</h6>
-              <select class="form-select" aria-label="Default select example">
-                <option selected>--Semestre--</option>
-                <option value="0">PROPEDEUTICO</option>
-                <option value="1">PRIMERO</option>
-                <option value="2">SEGUNDO</option>
-                <option value="3">TERCERO</option>
-                <option value="4">CUARTO</option>
-                <option value="5">QUINTO</option>
-                <option value="6">SEXTO</option>
-                <option value="7">SEPTIMO</option>
-                <option value="8">OCTAVO</option>
-                <option value="9">NOVENO</option>
-                <option value="10">DECIMO</option>
-              </select>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">#</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Grupo" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-              <h6>Lugar de Nacimiento</h6>
-              
+             
+              <app-fdatos></app-fdatos>
             </div>
             <!--fin de la tabla de datos personales-->
             
@@ -120,12 +100,119 @@
                 <button class="btn btn-primary me-md-2" type="button">Guardar</button>
               </div>
             </div>
-            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
+            <!--Ingresos mensuales-->
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">Nombre</span>
+                <input type="text" class="form-control" aria-label="Nombre" aria-describedby="basic-addon1">
+              </div>
+
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" aria-label="Parentesco" aria-describedby="basic-addon1">
+                <span class="input-group-text" id="basic-addon1">Parentesco</span>
+              </div>
+              
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon2">Nombre de la empresa</span>
+                <input type="text" class="form-control" aria-label="Calle" aria-describedby="basic-addon2">
+              </div>
+              
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Puesto" aria-label="No. Calle">
+                <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person" viewBox="0 0 16 16">
+                  <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5v2z"/>
+                </svg></span>
+                <input type="text" class="form-control" placeholder="Ingreso" aria-label="Colonia">
+                <span class="input-group-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"/>
+                  <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"/>
+                  <path d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"/>
+                  <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"/>
+                </svg></span>
+
+              </div>
+
+
+              <div class="d-grid gap-2 d-md-flex">
+                <button type="button" class="btn btn-outline-secondary">Guardar</button>
+              </div>
+            </div>
+            
+            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">
+             <div class="container">
+              <h5>Reporte de Personas que dependen del total de ingresos reportado en la pestaña anterior </h5>
+              <table class="table table-hover table-striped ">
+                
+                <thead>
+                    <tr>
+                   
+                      <th scope="col">Nombre</th>
+                      <th scope="col">Edad</th>
+                      <th scope="col">Parentesco</th>
+                      <th scope="col">Observaciones</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      
+                      
+                      <td>Ricardo Perez Zarate</td>
+                      <td>45</td>
+                      <td>Padre</td>
+                      <td></td>
+            
+                    </tr>
+                    <tr>
+                      
+                      <td>Alondra Santos Cortes</td>
+                      <td>45</td>
+                      <td>Madre</td>
+                      <td></td>
+                   
+            
+                    </tr>
+                    <tr>
+                    
+                      <td>Lucia Perez Santos</td>
+                      <td>12</td>
+                      <td>Hermana</td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                  
+            </table>
+          </div>
+            </div>
+            <div class="tab-pane fade" id="pills-recibos" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">
+              <div class="mb-3">
+                <label for="formFile" class="form-label">Default file input example</label>
+                <input class="form-control" type="file" id="formFile">
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="pills-observaciones" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">
+              <div class="input-form mb-3">
+                <label for="floatingTextarea2">Observaciones</label>
+                <textarea class="form-control" placeholder="Deja una observacion" id="floatingTextarea2" style="height: 100px; width:600px;"></textarea>
+                
+              </div>
+              <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="button">Guardar</button>
+
+              </div>
+            </div>
+            <div class="tab-pane fade" id="pills-confirmacion" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"> <label for="">Porcentaje de beca</label></div>
+              </div>
+              <button type="button" class="btn btn-outline-success" style="width: 400px;"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
+                <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+              </svg> Finalizar</button> 
+        
+            </div>
+            <div class="tab-pane fade" id="pills-privacidad" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
           </div>
       </div>
 </body>
